RESOLVED FIXED240218
[WinCairo][WK1] accessibility/aria-combobox-control-owns-elements.html is crashing after 250325@main
https://bugs.webkit.org/show_bug.cgi?id=240218
Summary [WinCairo][WK1] accessibility/aria-combobox-control-owns-elements.html is cra...
Fujii Hironori
Reported 2022-05-08 14:52:46 PDT
[WinCairo][WK1] accessibility/aria-combobox-control-owns-elements.html is crashing after 250325@main ASSERTION FAILED: document().settings().ariaReflectionForElementReferencesEnabled() C:\home\webkit\gb\Source\WebCore\dom/Element.cpp(1946) : WebCore::Element::attributeChanged 1 00007FFF012F23CB WTFCrash 2 00007FFEA6E39BEE WTFCrashWithInfo 3 00007FFEA9AEA87C WebCore::Element::attributeChanged 4 00007FFEA9D10238 WebCore::StyledElement::attributeChanged 5 00007FFEA9AF6E05 WebCore::Element::didAddAttribute 6 00007FFEA9AF83A9 WebCore::Element::addAttributeInternal 7 00007FFEA9BD76AF WebCore::Element::setAttributeInternal 8 00007FFEA9AE48DA WebCore::Element::setAttribute 9 00007FFEA7B8F21B `WebCore::jsElementPrototypeFunction_setAttributeBody'::`34'::<lambda_1>::operator() 10 00007FFEA7BD4886 WebCore::toJS<WebCore::IDLUndefined,`WebCore::jsElementPrototypeFunction_setAttributeBody'::`34'::<lambda_1> > 11 00007FFEA7B8F0CD WebCore::jsElementPrototypeFunction_setAttributeBody 12 00007FFEA7BB5E65 WebCore::IDLOperation<WebCore::JSElement>::call<&WebCore::jsElementPrototypeFunction_setAttributeBody,0> 13 00007FFEA7B789C5 WebCore::jsElementPrototypeFunction_setAttribute 14 0000022F000011BE
Attachments
Patch (2.15 KB, patch)
2022-05-09 00:09 PDT, Manuel Rego Casasnovas
no flags
Patch (3.68 KB, patch)
2022-05-09 00:12 PDT, Manuel Rego Casasnovas
no flags
Radar WebKit Bug Importer
Comment 1 2022-05-08 14:52:54 PDT
Fujii Hironori
Comment 2 2022-05-08 17:15:08 PDT
EWS
Comment 3 2022-05-08 17:20:05 PDT
Test gardening commit r293958 (250404@main): <https://commits.webkit.org/250404@main> Reviewed commits have been landed. Closing PR #560 and removing active labels.
Manuel Rego Casasnovas
Comment 4 2022-05-09 00:09:54 PDT
Manuel Rego Casasnovas
Comment 5 2022-05-09 00:12:48 PDT
EWS
Comment 6 2022-05-09 03:48:26 PDT
Committed r293970 (250408@main): <https://commits.webkit.org/250408@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 459033 [details].
Note You need to log in before you can comment on or make changes to this bug.