[WinCairo][WK1] accessibility/aria-combobox-control-owns-elements.html is crashing after 250325@main https://bugs.webkit.org/show_bug.cgi?id=240218 <rdar://problem/92929718>

Reviewed by Joanmarie Diggs.

Source/WebCore:

Fix a wrong ASSERT for AriaReflectionForElementReferencesEnabled.
If AriaReflectionForElementReferencesEnabled is disabled, and you set
one of the attributes that have reflection under that flag,
we'll hit an ASSERT in Element::attributeChanged().

The fact that we set such attribute doesn't mean that the flag
has to be enabled.

Removed the ASSERT and added an if to check if the flag is enabled,
otherwise we don't need to do anything with the map.

* dom/Element.cpp:
(WebCore::Element::attributeChanged):

LayoutTests:

* platform/wincairo-wk1/TestExpectations: Mark test as timeout as it
was before r293958.

Canonical link: https://commits.webkit.org/250408@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293970 268f45cc-cd09-0410-ab3c-d52691b4dbfc